My super Csharp-Lib added :P

--- a/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
+++ b/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Csharp-Extensions">
+      <HintPath>..\lib\Csharp-Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp">
       <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
     </Reference>
