--- a/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
+++ b/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
@@ -45,7 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APIConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RiotGamesAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
