--- a/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
+++ b/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{4319DCD7-EE69-4194-9ECA-828B02FD05AF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HechTex.RiotGamesAPI</RootNamespace>
+    <RootNamespace>HechTex.RiotGamesAPIWrapper</RootNamespace>
     <AssemblyName>HechTex.RiotGamesAPI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
