--- a/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
+++ b/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
@@ -48,13 +48,22 @@
     <Compile Include="KeyLoader\KeyLoaderFactory.cs" />
     <Compile Include="APIConstants.cs" />
     <Compile Include="Model\Champion.cs" />
+    <Compile Include="Model\Masteries\MasteryPage.cs" />
+    <Compile Include="Model\Masteries\Mastery.cs" />
+    <Compile Include="Model\Masteries\MasteryPages.cs" />
+    <Compile Include="Model\Runes\Rune.cs" />
+    <Compile Include="Model\Runes\RunePage.cs" />
+    <Compile Include="Model\Runes\RunePages.cs" />
+    <Compile Include="Model\Runes\RuneSlot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RiotGamesAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Model\Statistics\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
