--- a/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
+++ b/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Cache\CacheFactory.cs" />
     <Compile Include="Cache\AbstractCache.cs" />
     <Compile Include="Cache\CacheMethod.cs" />
+    <Compile Include="Cache\CacheSettings.cs" />
     <Compile Include="KeyLoader\KeyLoaderFactory.cs" />
     <Compile Include="APIConstants.cs" />
     <Compile Include="Model\Champion.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Model\Runes\RunePage.cs" />
     <Compile Include="Model\Runes\RuneSlot.cs" />
     <Compile Include="Model\Summoner.cs" />
+    <Compile Include="Model\SummonerName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RiotGamesAPI.cs" />
   </ItemGroup>
