Introducing: TreeCacheFactory. way better than the others. no cache cleaning for now (would use something like in TimedCache).

--- a/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
+++ b/RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper/HechTex.RiotGamesAPIWrapper.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Cache\CacheMethod.cs" />
     <Compile Include="Cache\CacheSettings.cs" />
     <Compile Include="Cache\FakeCacheFactory.cs" />
+    <Compile Include="Cache\TreeCacheFactory.cs" />
     <Compile Include="KeyLoader\KeyLoaderFactory.cs" />
     <Compile Include="APIConstants.cs" />
     <Compile Include="Model\Champion.cs" />
